<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reportes_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="mx.edu.uts.saferide.ReportesUsuario">

    <TextView
        android:text="@string/reportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNumPaq"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:hint="@string/numpaquete" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtReporte"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:hint="@string/reporte" />

    <Button
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:id="@+id/button11"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="reportarCondu"
        android:background="@drawable/enviar" />

</LinearLayout>
